--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,13 @@
         <item name="android:includeFontPadding">false</item>
     </style>
 
+    <!-- Splash -->
+    <style name="Theme.BlueClub.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/primary_normal</item>
+        <item name="windowSplashScreenAnimatedIcon">@android:color/transparent</item>
+        <item name="postSplashScreenTheme">@style/Theme.BlueClubAOS</item>
+    </style>
+
 
     <!-- Widget -->
     <style name="Widget.Material.Button.Basic" parent="">
