--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,5 +35,12 @@
         <item name="android:stateListAnimator">@null</item>
     </style>
 
+    <style name="Widget.Toolbar" parent="">
+        <item name="android:background">@color/white</item>
+        <item name="android:elevation">4dp</item>
+        <item name="android:paddingHorizontal">16dp</item>
+        <item name="android:paddingVertical">10dp</item>
+    </style>
+
     <style name="Theme.BlueClubAOS" parent="Base.Theme.BlueClubAOS" />
 </resources>
