--- a/app/src/main/res/layout/fragment_job_setting.xml
+++ b/app/src/main/res/layout/fragment_job_setting.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="org.blueclub.presentation.auth.AuthSettingViewModel" />
+            type="org.blueclub.presentation.auth.setting.AuthSettingViewModel" />
 
         <import type="org.blueclub.presentation.type.JobSettingViewType" />
     </data>
