--- a/app/src/main/res/layout/activity_auth_setting.xml
+++ b/app/src/main/res/layout/activity_auth_setting.xml
@@ -25,6 +25,8 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="4dp"
+            android:max="100"
+            android:progress="@{viewModel.currentPage.progress}"
             android:progressDrawable="@drawable/progress_bar"
             app:layout_constraintTop_toBottomOf="@+id/view_toolbar" />
 
