--- a/app/src/main/res/layout/fragment_nickname_setting.xml
+++ b/app/src/main/res/layout/fragment_nickname_setting.xml
@@ -107,11 +107,13 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_next"
+            style="@style/Widget.Material.Button.Basic"
             android:layout_width="0dp"
-            android:layout_height="46dp"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/shape_border_radius_12"
+            android:paddingVertical="17dp"
             android:text="@string/next"
             android:textAppearance="@style/TextAppearance.Subtitle1"
             app:layout_constraintBottom_toBottomOf="parent"
