--- a/app/src/main/res/layout/fragment_job_setting.xml
+++ b/app/src/main/res/layout/fragment_job_setting.xml
@@ -17,15 +17,28 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_choose_job"
+            android:id="@+id/tv_choose_job_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="48dp"
-            android:text="@string/auth_job_setting_description"
+            android:layout_marginTop="62dp"
+            android:text="@string/auth_job_setting_title"
             android:textAppearance="@style/TextAppearance.H6_Bold"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_choose_job_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/auth_job_setting_description"
+            android:textAppearance="@style/TextAppearance.Body2_Medium"
+            android:textColor="#7C7C7C"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_choose_job_title" />
 
         <TextView
             android:id="@+id/tv_job_type_golf"
@@ -33,7 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="22dp"
             android:background="@drawable/selector_job_setting"
             android:onClick="@{() -> viewModel.setJobType(JobSettingViewType.GOLF)}"
             android:paddingVertical="17dp"
@@ -43,7 +56,7 @@
             android:textColor="@drawable/selector_job_setting_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_choose_job"
+            app:layout_constraintTop_toBottomOf="@+id/tv_choose_job_description"
             tools:text="골프캐디" />
 
         <TextView
@@ -52,7 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/selector_job_setting"
             android:onClick="@{() -> viewModel.setJobType(JobSettingViewType.RIDER)}"
             android:paddingVertical="17dp"
@@ -67,59 +80,22 @@
 
         <TextView
             android:id="@+id/tv_job_type_delivery"
-            selected="@{viewModel.selectedJobType.get(JobSettingViewType.DELIVERY)}"
+            selected="@{viewModel.selectedJobType.get(JobSettingViewType.DAY_LABOR)}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/selector_job_setting"
-            android:onClick="@{() -> viewModel.setJobType(JobSettingViewType.DELIVERY)}"
+            android:onClick="@{() -> viewModel.setJobType(JobSettingViewType.DAY_LABOR)}"
             android:paddingVertical="17dp"
-            android:text="@{JobSettingViewType.DELIVERY.titleRes}"
+            android:text="@{JobSettingViewType.DAY_LABOR.titleRes}"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.Subtitle1"
             android:textColor="@drawable/selector_job_setting_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_job_type_rider"
-            tools:text="택배 기사" />
+            tools:text="일용직 근로자" />
 
-        <TextView
-            android:id="@+id/tv_job_type_insurance"
-            selected="@{viewModel.selectedJobType.get(JobSettingViewType.INSURANCE)}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/selector_job_setting"
-            android:onClick="@{() -> viewModel.setJobType(JobSettingViewType.INSURANCE)}"
-            android:paddingVertical="17dp"
-            android:text="@{JobSettingViewType.INSURANCE.titleRes}"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.Subtitle1"
-            android:textColor="@drawable/selector_job_setting_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_job_type_delivery"
-            tools:text="보험 설계사" />
-
-        <TextView
-            android:id="@+id/tv_job_type_freelancer"
-            selected="@{viewModel.selectedJobType.get(JobSettingViewType.FREELANCER)}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/selector_job_setting"
-            android:onClick="@{() -> viewModel.setJobType(JobSettingViewType.FREELANCER)}"
-            android:paddingVertical="17dp"
-            android:text="@{JobSettingViewType.FREELANCER.titleRes}"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.Subtitle1"
-            android:textColor="@drawable/selector_job_setting_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_job_type_insurance"
-            tools:text="기타·프리랜서" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
