--- a/app/src/main/res/values/text_appearance.xml
+++ b/app/src/main/res/values/text_appearance.xml
@@ -30,6 +30,11 @@
         <item name="android:fontFamily">@font/pretendard_regular</item>
     </style>
 
+    <style name="TextAppearance.Caption4" parent="">
+        <item name="android:textSize">9dp</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
+    </style>
+
     <style name="TextAppearance.Body1_Medium" parent="">
         <item name="android:textSize">16dp</item>
         <item name="android:fontFamily">@font/pretendard_medium</item>
