[chore] #6 리소스 추가

--- a/app/src/main/res/drawable/ic_arrow_down_black.xml
+++ b/app/src/main/res/drawable/ic_arrow_down_black.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="20">
   <path
       android:pathData="M16.422,6.912C16.747,7.237 16.747,7.765 16.422,8.091L10.589,13.924C10.263,14.249 9.736,14.249 9.41,13.924L3.577,8.091C3.251,7.765 3.251,7.237 3.577,6.912C3.902,6.587 4.43,6.587 4.755,6.912L9.999,12.156L15.243,6.912C15.569,6.587 16.097,6.587 16.422,6.912Z"
-      android:fillColor="#979797"
+      android:fillColor="#3C3C3C"
       android:fillType="evenOdd"/>
 </vector>
