--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
     <color name="coolgray_04">#CBD5E0</color>
     <color name="coolgray_05">#A0AEC0</color>
     <color name="coolgray_06">#718096</color>
-    <color name="coolgray_07">#626F85</color>
+    <color name="coolgray_07">#3F444D</color>
     <color name="coolgray_08">#4A5568</color>
     <color name="coolgray_09">#2D3748</color>
     <color name="coolgray_10">#1A202C</color>
