--- a/app/src/main/res/layout/fragment_workbook.xml
+++ b/app/src/main/res/layout/fragment_workbook.xml
@@ -125,21 +125,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background_bubble"
-                    android:text="20%"
-                    android:paddingVertical="2dp"
                     android:paddingHorizontal="10dp"
+                    android:paddingVertical="2dp"
                     android:textAppearance="@style/TextAppearance.Caption3"
                     android:textColor="@color/white"
                     app:layout_constraintStart_toStartOf="@+id/pb_goal"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="70%" />
 
 
                 <ImageView
                     android:id="@+id/iv_bubble_below"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginBottom="4dp"
                     android:src="@drawable/ic_triangle_down"
                     app:layout_constraintBottom_toTopOf="@+id/pb_goal"
                     app:layout_constraintStart_toStartOf="@+id/pb_goal" />
@@ -150,13 +150,13 @@
                     android:layout_width="0dp"
                     android:layout_height="12dp"
                     android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="8dp"
                     android:max="100"
-                    android:progress="@{viewModel.goalProgress}"
+                    android:progress="@{(viewModel.goalProgress > 3) ? viewModel.goalProgress : 3 }"
                     android:progressDrawable="@drawable/progressbar_goal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_bubble_amount"
-                    android:layout_marginTop="8dp"
                     tools:progress="20" />
 
                 <TextView
