--- a/app/src/main/res/layout/layout_calendar_day.xml
+++ b/app/src/main/res/layout/layout_calendar_day.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +10,7 @@
         android:id="@+id/tv_calendar_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
         android:background="@drawable/ic_coin"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.Subtitle2"
