[chore] #6 패키지 이동

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/workbookFragment"
-        android:name="org.blueclub.presentation.home.WorkbookFragment"
+        android:name="org.blueclub.presentation.workbook.WorkbookFragment"
         android:label="WorkbookFragment"
         tools:layout="@layout/fragment_workbook" />
 
