--- a/app/src/main/res/layout/item_daily_work_amount.xml
+++ b/app/src/main/res/layout/item_daily_work_amount.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="option"
+            type="org.blueclub.presentation.model.DailyWorkDetailOption" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -22,12 +30,13 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
             android:layout_marginStart="4dp"
-            android:text="@string/daily_caddie_caddie_p"
+            android:text="@{option.titleRes}"
             android:textAppearance="@style/TextAppearance.Body1_Medium"
             android:textColor="@color/coolgray_06"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_money"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/daily_caddie_p" />
 
         <include
             android:id="@+id/view_necessary_tag"
@@ -35,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
+            app:visibility="@{option.necessary}"
             app:layout_constraintBottom_toBottomOf="@+id/tv_amount_title"
             app:layout_constraintStart_toEndOf="@+id/tv_amount_title"
             app:layout_constraintTop_toTopOf="@+id/tv_amount_title" />
