--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,6 +35,10 @@
         <item name="android:stateListAnimator">@null</item>
     </style>
 
+    <style name="Widget.FullButton.Basic" parent="Widget.Material.Button.Basic">
+        <item name="cornerRadius">12dp</item>
+    </style>
+
     <style name="Widget.Toolbar" parent="">
         <item name="android:background">@color/white</item>
         <item name="android:elevation">4dp</item>
