[chore] #8 패키지 이동

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.home.MyPageFragment">
+        tools:context=".presentation.mypage.MyPageFragment">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
