--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/mypageFragment"
-        android:name="org.blueclub.presentation.home.MyPageFragment"
+        android:name="org.blueclub.presentation.mypage.MyPageFragment"
         android:label="MyPageFragment"
         tools:layout="@layout/fragment_my_page" />
 </navigation>
