--- a/app/src/main/res/layout/activity_profile_setting.xml
+++ b/app/src/main/res/layout/activity_profile_setting.xml
@@ -59,9 +59,11 @@
 
         <ImageView
             android:id="@+id/iv_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
             android:layout_marginTop="24dp"
+            android:background="@drawable/shape_oval"
             android:src="@drawable/ic_profile_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -183,7 +185,7 @@
             android:background="@drawable/shape_edittext_nickname"
             android:backgroundTint="@color/gray_01"
             android:gravity="center_vertical"
-            android:text="@{viewModel.chosenJobType.titleRes}"
+            android:text="골프캐디"
             android:textAppearance="@style/TextAppearance.Body1"
             android:textColor="@color/gray_08"
             app:layout_constraintEnd_toEndOf="parent"
