--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -60,5 +60,12 @@
         <item name="android:minHeight">0dp</item>
     </style>
 
+    <style name="Style.Check" parent="">
+        <item name="android:background">@drawable/selector_check</item>
+        <item name="android:button">@null</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+    </style>
+
     <style name="Theme.BlueClubAOS" parent="Base.Theme.BlueClubAOS" />
 </resources>
